# esp32_network_manager

./: CMakeLists.txt  Kconfig
include/: eth_manager.h  kutils.h  wifi_manager.h
src/: eth_manager.c  wifi_manager.c
